frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: brendanburns/journal-server:latest
        imagePullPolicy: IfNotPresent
        name: frontend
#        terminationMessagePath: /dev/termination-log
#        terminationMessagePolicy: File
        resources:
          requests:
            cpu: "1.0"
            memory: "1G"
          limits:
            cpu: "1.0"
            memory: "1G"
        volumeMounts:
          - name: passwd-volume
            readOnly: true
            mountPath: "/etc/redis-passwd"
      volumes:
        - name: passwd-volume
          secret:
            secretName: redis-passwd
      dnsPolicy: ClusterFirst
      restartPolicy: Always
